@@ -2,6 +2,7 @@
 namespace evf{
   namespace evtn{
       const unsigned int SLINK_WORD_SIZE = 8;
+      const unsigned int SLINK_HALFWORD_SIZE = 4;
       const unsigned int DAQ_TOTTRG_OFFSET = 2; //offset in 32-bit words
       const unsigned int DAQ_BOARDID_OFFSET = 1;
       const unsigned int DAQ_BOARDID_MASK = 0xffff0000;
@@ -11,10 +12,20 @@ namespace evf{
       const unsigned int EVM_BOARDID_MASK = 0xffff0000;
       const unsigned int EVM_BOARDID_SHIFT = 24;
       const unsigned int EVM_BOARDID_VALUE = 0x11;
-      const unsigned int EVM_GTFE_BLOCK = 6; //size in 64-bit words
-      const unsigned int EVM_TCS_TRIGNR_OFFSET = 5; //offset in 32-bit words
-      const unsigned int EVM_TCS_LSBLNR_OFFSET = 0; //offset in 32-bit words
-      const unsigned int EVM_TCS_LSBLNR_MASK   = 0x0000ffff; // 16 LSB
+       const unsigned int EVM_GTFE_BLOCK = 6; //size in 64-bit words
+      //const unsigned int EVM_GTFE_BLOCK = 9; //size in 64-bit words, new format, not yet in effect
+      const unsigned int EVM_TCS_BLOCK = 5; //size in 64-bit words
+      const unsigned int EVM_FDL_BLOCK = 7; //size in 64-bit words
+      const unsigned int EVM_GTFE_BSTGPS_OFFSET = 4; //offset in 32-bit words
+      const unsigned int EVM_TCS_TRIGNR_OFFSET  = 5; //offset in 32-bit words
+      const unsigned int EVM_TCS_LSBLNR_OFFSET  = 0; //offset in 32-bit words
+      const unsigned int EVM_TCS_ORBTNR_OFFSET  = 6; //offset in 32-bit words
+      const unsigned int EVM_TCS_LSBLNR_MASK    = 0x0000ffff; // 16 LSB
+
+      const unsigned int EVM_FDL_BCNRIN_OFFSET  = 1; //offset in 32-bit words
+      const unsigned int EVM_FDL_PSCVSN_OFFSET  = 11; //offset in 32-bit words
+      const unsigned int EVM_TCS_BCNRIN_MASK    = 0x00000fff; // 12 LSB
+
       unsigned int offset(bool);
       inline bool daq_board_sense(const unsigned char *p)
 	{
@@ -26,5 +37,10 @@ namespace evf{
 	}
       unsigned int get(const unsigned char *, bool);
       unsigned int getlbn(const unsigned char *);
+      unsigned int getgpslow(const unsigned char *);
+      unsigned int getgpshigh(const unsigned char *);
+      unsigned int getorbit(const unsigned char *);
+      unsigned int getfdlbx(const unsigned char *);
+      unsigned int getfdlpsc(const unsigned char *);
   }
 }
